Update so the main header text alignment is fixed
Needed to add text that cannot be seen to the left div in the header
so that the main text is centered on the page.

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ a:hover {
   max-width: 200px;
 }
 
+.text_blend {
+  color: #718eb1;
+}
+
 .origheading {
   width: 100%;
   text-align: match-parent;
